# EvidentRAG

./: .env.docker.example  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  skills-lock.json
server/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
server/app/: frontend.py  main.py  worker.py
server/app/api/: errors.py
server/app/api/middleware/: access_logging.py  request_context.py
server/app/api/routes/: documents.py  health.py  models.py  queries.py  sentence_traces.py  threads.py
server/app/api/schemas/: documents.py  queries.py  threads.py
server/app/api/sse/: sse.py
server/app/application/ingestion/: pipeline.py
server/app/application/query_pipeline/: arag_router.py  content_parts.py  erm.py  json_stream_parser.py  query_pipeline.py
server/app/core/: config.py  logging.py  runtime_context.py  telemetry.py
server/app/infrastructure/ai/: __init__.py  scheduler.py
server/app/infrastructure/db/: migrations.py  models.py  session.py
server/app/infrastructure/embeddings/: embedding.py
server/app/infrastructure/llm/: context_manager.py  llm.py
server/app/infrastructure/qdrant/: client.py
server/app/infrastructure/reranker/: __init__.py  reranker.py
server/app/infrastructure/storage/: __init__.py  local.py
server/app/seed/: generate_demo_corpus.py  seed_demo_data.py
server/app/seed/demo-corpus/: attention-is-all-you-need-arxiv-1706-03762.json  bert-pre-training-of-deep-bidirectional-transformers-for-language-understanding-arxiv-1810-04805.json  filtered-approximate-nearest-neighbor-search-in-vector-databases-system-design-and-performance-analysis-arxiv-2602-11443.json  retrieval-augmented-generation-for-knowledge-intensive-nlp-tasks-arxiv-2005-11401.json
server/app/seed/snapshots/: evidentrag_evidence-4843594969853866-2026-06-30-19-01-00.snapshot  issue-02-pg.sql  issue-04-pg.sql  issue-04-qdrant.snapshot
server/migrations/: env.py  script.py.mako
server/migrations/versions/: 20260630_00_initial_schema.py  20260711_01_document_versions.py  20260714_02_document_integrity.py
server/tests/: conftest.py
server/tests/e2e/: test_health.py
server/tests/integration/: test_api.py  test_documents_api.py
server/tests/support/: runtime_fakes.py  settings.py
server/tests/unit/: test_arag_router.py  test_content_parts.py  test_context_manager.py  test_db_models.py  test_document_schemas.py  test_document_storage.py  test_embedding.py  test_erm.py  test_generate_demo_corpus.py  test_ingestion_pipeline.py  test_integration_guard.py  test_json_stream_parser.py  test_llm.py  test_logging.py  test_main_startup.py  test_migrations.py  test_qdrant_store.py  test_query_pipeline.py  test_query_routes.py  test_request_observability.py  test_rerank_error_handling.py  test_reranker.py  test_scheduler.py  test_seed_demo_data.py  test_settings.py  test_sse.py  test_telemetry.py  test_thread_answer_response.py  test_thread_routes.py  test_worker.py
(+202 files in other folders)
