[project]
name = "server"
version = "0.1.0"
description = "Minimal server scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "qdrant-client>=1.13.0",
    "redis>=5.2.0",
    "arq>=0.26.3",
    "docling>=2.107.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"

include = ["app", "tests"]

exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  ".pytest_cache",
  ".ruff_cache",
  "node_modules"
]
