[project]
name = "server"
version = "0.1.0"
description = "Minimal server scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "opentelemetry-instrumentation-redis>=0.57b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "qdrant-client>=1.13.0",
    "redis>=5.2.0",
    "arq>=0.26.3",
    "docling>=2.107.0",
    "alembic>=1.18.5",
    "python-multipart>=0.0.32",
    "google-genai>=1.0.0",
]

[project.scripts]
seed-demo-data = "app.seed.seed_demo_data:main"

[dependency-groups]
dev = [
    "basedpyright>=1.30.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers"
testpaths = ["tests"]
markers = [
    "integration: requires a disposable PostgreSQL database and live service stack",
    "e2e: exercises health behavior against the disposable live service stack",
]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"

include = ["app", "tests"]

exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  ".pytest_cache",
  ".ruff_cache",
  "node_modules"
]
